# plc-data-collector

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  LICENSE_POLICY.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
Agents/: AGENTS.md  CHANGELOG.md  LICENSE_POLICY.md  MASTER_PROMPT.md  README.md  THIRD_PARTY_NOTICES.md
docs/deployment/: service-packaging.md
docs/examples/: gateway.config.example.json
docs/release-notes/: 0.1.0.md
docs/tasks/: 00-bootstrap.md  01-domain-models.md  02-configuration.md  03-driver-contract.md  04-mock-driver.md  05-scheduler.md  06-connection-worker.md  07-reading-queue.md  08-persistence.md  09-database-writer.md  10-health-api.md  11-retry-observability.md  12-opcua-driver.md  13-disk-spool.md  14-service-packaging.md  15-license-credits.md  16-mvp-release.md  README.md
migrations/: env.py
migrations/versions/: 0001_create_initial_schema.py
src/plc_gateway/: __init__.py  __main__.py  _version.py  build_info.py  license_info.py
src/plc_gateway/api/: __init__.py  app.py  state.py
src/plc_gateway/app/: __init__.py  config.py  health.py  logging.py  service.py
src/plc_gateway/domain/: __init__.py  exceptions.py  models.py
src/plc_gateway/license_data/: __init__.py  credits.json
src/plc_gateway/persistence/: __init__.py  database.py  records.py  repositories.py  schema.py  spool.py  types.py  writer.py
src/plc_gateway/protocols/: __init__.py  driver.py  mock.py  opcua.py  registry.py
src/plc_gateway/runtime/: __init__.py  connection_worker.py  reading_queue.py  retry.py  scheduler.py
tests/: test_bootstrap.py  test_config.py  test_connection_worker.py  test_database_writer.py  test_domain_models.py  test_driver_registry.py  test_durable_spool.py  test_health_api.py  test_license_info.py  test_mock_driver.py  test_opcua_driver.py  test_persistence.py  test_reading_queue.py  test_release_mvp.py  test_retry_observability.py  test_scheduler.py  test_service_packaging.py
tools/: generate_credits.py
