[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "plc-gateway"
version = "0.0.0"
description = "Industrial PLC and OPC data collector MVP"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "PLC Gateway contributors" }
]
dependencies = [
  "alembic==1.17.1",
  "fastapi==0.139.0",
  "SQLAlchemy==2.0.44",
  "uvicorn==0.35.0",
  "pydantic==2.11.3"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.21",
  "mypy==2.2.0"
]

[project.scripts]
plc-gateway = "plc_gateway.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plc_gateway = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
